src/testsuite/single/tests/compiler/fail/bad_for_init.c
void foo() {
    for (int x += 1; ; ) ;
}
    
